2008-12-26  Cedric Vivier  <cedricv@neonux.com>

	* UsePreferredTermsRule.cs: Fix false positives when term is part of
	a larger word. Improve text. Use CheckIdentifier for namespaces too.

2008-12-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs: Replace IndexOf("_")
	with IndexOf('_') since it's faster (self-test) but probably not much
	in this case since we were already using StringComparison.Ordinal.

2008-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidTypeInterfaceInconsistencyRule.cs: New. Rule that checks
	if typpe Foo implements interface IFoo when both exists in the same 
	namespace of the same assembly.
	* Makefile.am: Add new rule and tests to the build

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Use HasParameters
	* DetectNonAlphaNumericsInTypeNamesRule.cs: Use HasFields and 
	HasParameters
	* DoNotPrefixEventsWithAfterOrBeforeRule.cs: Use HasEvents
	* ParameterNamesShouldMatchOverridenMethodRule.cs: Use HasParameters
	* UseCorrectCasingRule.cs: Use HasParameters
	* UseCorrectPrefixRule.cs: Use HasGenericParameters
	* UseCorrectSuffixRule.cs: Use HasGenericParameters
	* UsePreferredTermsRule.cs: Use HasFields

2008-11-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs: Move IsEnum check 
	outside the loop.

2008-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Specify StringComparison.Ordinal
	when calling String.[Start|End]sWith. Use the new Exists method
	from NamespaceEngine.
	* AvoidRedundancyInTypeNameRule.cs: Specify StringComparison.Ordinal
	when calling String.[Start|End]sWith.
	* DoNotPrefixEventsWithAfterOrBeforeRule.cs: Specify 
	StringComparison.Ordinal when calling String.StartsWith.
	* DoNotUseReservedInEnumValueNamesRule.cs: Specify StringComparison.
	Ordinal when calling String.IndexOf.
	* UseCorrectSuffixRule.cs: Specify StringComparison.Ordinal when 